--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -1,4 +1,4 @@
-app_desc = A painless self-hosted Git service
+app_desc = Unrestriccted biblical content in every language
 
 home = Home
 dashboard = Dashboard
@@ -478,7 +478,8 @@ license = License
 license_helper = Select a license file
 readme = Readme
 readme_helper = Select a readme template
-auto_init = Initialize this repository with selected files and template
+auto_init = Initialize this repository with license and README file
+auto_init_helper = This will let you immediately clone the repository to your computer. Uncheck this box if you're importing an existing repository.
 create_repo = Create Repository
 default_branch = Default Branch
 mirror_prune = Prune
@@ -531,8 +532,8 @@ create_new_repo_command = Creating a new repository on the command line
 push_exist_repo = Pushing an existing repository from the command line
 bare_message = This repository does not contain any content.
 
-code = Code
-code.desc = Code is where the code is stored
+code = Files
+code.desc = Files is where the files are stored
 branch = Branch
 tree = Tree
 filter_branch_and_tag = Filter branch or tag
@@ -1028,6 +1029,14 @@ settings.update_protect_branch_success = Branch %s protect options changed succe
 settings.remove_protected_branch_success= Branch %s protect options removed successfully
 settings.protected_branch_deletion=To delete a protected branch
 settings.protected_branch_deletion_desc=Anyone with write permissions will be able to push directly to this branch. Are you sure?
+settings.scrub = Remove Sensitive Data
+settings.scrub_desc = Removes names, email addresses, and phone numbers from the manifest.json, project.json, package.json or status.json files in the repository
+settings.scrub_notices_1 = This will remove all names, email addresses, and phone numbers from the manifest.json, project.json, package.jon or status.json files in the repository
+settings.scrub_form_title = Please enter following information to confirm your operation:
+settings.scrub_success = Successfully removed sensitive data
+settings.scrub_commit_message = Removed sensitive data
+settings.scrub_error = There was as an error removing sensitive data. Please make sure all JSON files are formatted properly.
+settings.scrub_nothing_to_scurb = There is nothing that can be removed from the project's JSON files
 settings.default_branch_desc = The default branch is considered the "base" branch in your repository against which all pull requests and code commits are automatically made, unless you specify a different branch.
 settings.choose_branch = Choose a branch...
 settings.no_protected_branch = There are no protected branches
@@ -1551,6 +1560,11 @@ invalid_input_type = You can't upload files of this type.
 file_too_big = File size ({{filesize}} MB) exceeds the maximum size of ({{maxFilesize}} MB).
 remove_file = Remove file
 
+[signup]
+agreement = By creating an account on this website, you affirm that you have read and understood the <a href="https://door43.org/en/legal/" target="_blank">Terms & Conditions</a> and agree to:<ul><li>Only add content to this website that does not infringe on someone else's copyright.</li><li>Only add content to this website that does not conflict with the <a href="https://door43.org/en/statement-of-faith/" target="_blank">Statement of Faith</a>.</li><li>Release your contributions to the content on this website under a <a href="https://door43.org/en/copyright-and-licensing/" target="_blank">Creative Commons Attribution-ShareAlike 4.0 International License.</a></li>
+user_name_helper = This is publicly visible
+email_helper = This is visible to other users and may be seen in the revision history of files you edit
+
 [notification]
 notifications = Notifications
 unread = Unread
@@ -1573,3 +1587,8 @@ error.failed_retrieval_gpg_keys = "Failed to retrieve any key attached to the co
 [units]
 error.no_unit_allowed_repo = Cannot find any unit on this repository which you are allowed to access
 error.unit_not_allowed = You are not allowed to visit this repository unit
+
+; unfoldingWord-specific locales
+
+[repo]
+see_on_door43 = See on Door43
